Add bigger mobile status screen app

--- a/SELibrary/SELibrary.csproj
+++ b/SELibrary/SELibrary.csproj
@@ -94,6 +94,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MobileStationStatus\Program.cs" />
     <Compile Include="Welder\Program.cs" />
     <Compile Include="BigMiner\Program.cs" />
     <Compile Include="MobileStationDoorCloser\Program.cs" />
